fix: align ACP integrations hero spacing

--- a/src/components/sections/aip/integrations-page.module.css
+++ b/src/components/sections/aip/integrations-page.module.css
@@ -13,11 +13,6 @@
   padding-bottom: 90px;
 }
 
-.acpHeroSection {
-  padding-top: 80px;
-  padding-bottom: 100px;
-}
-
 .heroContent {
   display: flex;
   flex-direction: column;
@@ -165,11 +160,6 @@
   .heroSection {
     padding-top: 120px;
     padding-bottom: 80px;
-  }
-
-  .acpHeroSection {
-    padding-top: 70px;
-    padding-bottom: 87.5px;
   }
 
   .heroContent {
